--- a/namespaces/istio-system/destination-rule.yaml
+++ b/namespaces/istio-system/destination-rule.yaml
@@ -9,5 +9,4 @@ spec:
   host: '*.local'
   trafficPolicy:
     tls:
-      mode: ISTIO_MUTUAL
-#      mode: ISTIO_MUTUAL
+      mode: ISTIO_MUTUAL #DISABLE
